--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
+    "mongoose": "^6.10.0",
     "nodemon": "^2.0.20"
   }
 }
